# OOP

./: 19.json  20.txt  variant.json
lab0.1/: CMakeLists.txt  address.cpp  address.h  lab1.docx  main.cpp
lab0.2/: CMakeLists.txt  address.cpp  address.h  lab2.docx  main.cpp
lab1/: Rectangle.cpp  Trapezoid.cpp  Trapezoid.h  figure.h  lab3.docx  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  trapezoid.cpp  trapezoid.h
lab1/main/: 20.txt  Figure.h  Rectangle.h  Rhombus.cpp
lab2/: Figure.h  Node.cpp  Node.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  TNaryTree.cpp  TNaryTree.h  input.txt  khernya  lab4.docx  main.cpp  point.cpp  rectangle.cpp  rectangle.h  tnarytree.cpp  tnarytree.h
lab3/: lab5.docx  main.cpp  rectangle.cpp  tnarytree.cpp  tnarytree.h
lab4/: figure.h  lab4.docx  lab6.docx  main.cpp  point.cpp  rectangle.cpp  rectangle.h  rhombus.h  tnarytree.cpp  tnarytree.h  trapezoid.cpp  trapezoid.h
lab5/: lab7.docx  main.cpp  rectangle.cpp  rectangle.h  rhombus.cpp  tnarytree.cpp  tnarytree.h  tnarytreeitem.cpp  tnarytreeitem.h  trapezoid.cpp  trapezoid.h
lab7/: figure.h  lab8.docx  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  tnarytree.cpp  tnarytree.h  tnarytreeitem.cpp  tnarytreeitem.h  trapezoid.cpp  trapezoid.h  tvector.cpp  tvector.h
